@@ -16,4 +16,4 @@ Depends: R (>= 3.2.0)
 Imports: Rcpp (>= 0.12.9)
 LinkingTo: Rcpp (>= 0.12.9), BH
 Suggests: gettz
-RoxygenNote: 6.0.0
+RoxygenNote: 6.0.1
